Fixed scroll bug on chrome by using overflow-auto instead of overflow-scroll

--- a/css/PortalThumbnailGenerator.css
+++ b/css/PortalThumbnailGenerator.css
@@ -28,5 +28,4 @@
 /* Max height for search results */
 .searchResults {
     max-height: 12rem;
-    overflow: scroll;
 }
